refactor: remove base path from api routes
